# Zinc-Examples

./: .cmakelists.swp  CMakeLists.txt  README.md  plane.exelem  plane.exnode  temp.exelem  temp.exfile  temp.exnode
geometry/examples/a/ai/cmiss_input/: example_ai.com  head_geometry.exelem  head_geometry.exnode  index.html
geometry/examples/a/ai/cmiss_input/.svn/: all-wcprops  entries
geometry/examples/a/ai/cmiss_input/.svn/text-base/: bone_geometry.exelem.svn-base  brain_geometry.exelem.svn-base  skin_geometry.exelem.svn-base
geometry/examples/a/ai/testing/.svn/: all-wcprops  entries
geometry/examples/a/ai/testing/diff/.svn/: all-wcprops  entries
geometry/examples/a/ai/testing/diff/generic/.svn/: all-wcprops  entries
geometry/examples/a/ai/testing/diff/generic/.svn/text-base/: cmiss_test.log.opt.svn-base
geometry/examples/a/ai/web_data/: description.html  name.txt
geometry/examples/a/ai/web_data/.svn/: all-wcprops  entries
geometry/examples/a/ai/web_data/.svn/text-base/: ai.png.svn-base
geometry/examples/a/mesh_integration/cmiss_input/: allshapes.exelem  allshapes.exnode  index.html  mesh_integration_v300.com
geometry/examples/a/mesh_integration/cmiss_input/.svn/: all-wcprops  entries
geometry/examples/a/mesh_integration/cmiss_input/.svn/text-base/: allshapes.exelem.svn-base  allshapes.exnode.svn-base  mesh_integration.com.svn-base
geometry/examples/a/mesh_integration/testing/.svn/: all-wcprops  entries
geometry/examples/a/mesh_integration/testing/ndiff/.svn/: all-wcprops  entries
geometry/examples/a/mesh_integration/testing/ndiff/generic/: cmiss_test.log.opt
geometry/examples/a/mesh_integration/testing/ndiff/generic/.svn/: all-wcprops  entries
geometry/examples/a/mesh_integration/testing/ndiff/generic/.svn/text-base/: cmiss_test.log.svn-base
geometry/examples/a/mesh_integration/web_data/: description.html
geometry/examples/a/mesh_integration/web_data/.svn/: all-wcprops  entries
geometry/examples/a/mesh_integration/web_data/.svn/text-base/: name.txt.svn-base
geometry/examples/a/optimisation/fitting-1D-linear/cmiss_input/: data.exnode  fitting-1D-linear.com  index.html  mesh.exelem  mesh.exnode  mesh_circle.exelem  mesh_circle.exnode  mesh_upgrade.exelem  mesh_upgrade.exnode  surface_nodes_circle.exnode
geometry/examples/a/optimisation/fitting-1D-linear/cmiss_input/.svn/: all-wcprops  entries
geometry/examples/a/optimisation/fitting-1D-linear/cmiss_input/.svn/text-base/: data.exnode.svn-base  mesh.exelem.svn-base  mesh.exnode.svn-base
geometry/examples/a/optimisation/fitting-1D-linear/testing/.svn/: all-wcprops  entries
geometry/examples/a/optimisation/fitting-1D-linear/testing/ndiff/.svn/: all-wcprops  entries
geometry/examples/a/optimisation/fitting-1D-linear/testing/ndiff/generic/: fitted-lsq.exnode.opt  fitted-qn.exnode
geometry/examples/a/optimisation/fitting-1D-linear/testing/ndiff/generic/.svn/: all-wcprops  entries
geometry/examples/a/optimisation/fitting-1D-linear/testing/ndiff/generic/.svn/text-base/: cmiss_test.log.opt.svn-base  fitted-lsq.exnode.svn-base  fitted-qn.exnode.opt.svn-base
geometry/examples/a/optimisation/fitting-1D-linear/web_data/: description.html
geometry/examples/a/optimisation/fitting-1D-linear/web_data/.svn/: all-wcprops  entries
geometry/examples/a/optimisation/fitting-1D-linear/web_data/.svn/text-base/: fitted-mesh.png.svn-base  fitting-1D-linear.png.svn-base  name.txt.svn-base
source/: cmgui_example_ai.cpp  cmgui_example_mesh_integration.cpp  cmgui_example_optimisation_fitting-1D-linear.cpp  new_cmiss.cpp
zinc_wrapper/: CMakeLists.txt
zinc_wrapper/include/: zinc_wrapper.hpp
zinc_wrapper/source/: zinc_wrapper.cpp
